# website

./: .gitignore  404.qmd  _quarto.yml  about.qmd  config.toml  custom.scss  index.qmd  netlify.toml  styles.css
assets/scss/: custom.scss
config/_default/: menus.toml  params.toml
content/: blog  license.md
content/about/: about.md
content/home/: featured.md  first_bar.md  projects.md  tags.md  talks.md
data/fonts/: emily.toml
data/themes/: emily.toml
docs/: 404-listing.json  404.html  about.html  index-data.xml  index-dbt.xml  index-python.xml  index-rmarkdown.xml  index-rstats.xml  index-sql.xml  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml  styles.css
docs/post/: featured.html  index-listing.json  index.html
docs/project/: index.html
docs/publication/: index.html  index.xml
docs/talk/: featured.html  index.html  index.xml
layouts/partials/: custom_head.html  site_footer.html
post/: .gitignore  _metadata.yml  featured.qmd  index.qmd
post/_drafts/quarto-comms/: fake-analysis.qmd  hello.py  index.qmd  pyproject.toml  raw-analysis.ipynb
post/abstraction-airbyte/: index.qmd
post/abstraction-extraction/: index.qmd
post/causal-data/: index.qmd
post/causal-design-patterns/: aiptw.excalidraw  complier.excalidraw  excalidar-rct.excalidraw  fuzzy-rd.excalidraw  index.qmd  industry-advantages.excalidraw  why-not-rct.excalidraw
post/column-name-contracts/: index.qmd
post/convo-dbt/: index.qmd  sample_output.csv
post/convo-dbt-update/: index.qmd
post/convo-intro/: index.qmd
post/crosstalk/: index.qmd
post/data-discovery-ad-hoc/: index.qmd
post/data-error-gen/: index.qmd
post/data-valid-lightweight/: index.qmd
post/orbital-mlops/: dev.duckdb  index.qmd  pyproject.toml
post/orbital-xgb/: index.qmd  orbital-xgb.ipynb  pyproject.toml
post/py-rgo/: index.qmd
post/py-rgo-udf/: index.qmd  pyproject.toml
post/quarto-comms/: Quarto embed schema.pptx  index.qmd  pyproject.toml  raw-analysis.ipynb
project/: index.qmd
publication/: index.qmd
static/: _redirects
talk/: featured.qmd  index.qmd
(+329 files in other folders)
