[project]
name = "orbital-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "sqlglot>=27.7.0",
]
