[project]
name = "py-rgo-sac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "polars-ds>=0.10.2",
    "polars>=1.35.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
